--- a/main.html
+++ b/main.html
@@ -7,6 +7,27 @@
 </head>
 
 <body>
+	<nav>
+		<ul>
+			<a href="">Home</a>
+			<a href="">About us</a>
+			<a href="">Contact us</a>
+		</ul>
+	</nav>
+
+	<h1>3 random videos</h1>
+	<video width="320" height="240" controls>
+      <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+    </video>
+
+    <video width="320" height="240" controls>
+      <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" type="video/ogg">
+	</video>
+	
+	<video width="320" height="240" controls>
+       <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4" type="video/ogg">
+	</video>	
+	
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
