--- a/main.html
+++ b/main.html
@@ -9,9 +9,9 @@
 <body>
 	<nav>
 		<ul>
-			<a href="">Home</a>
-			<a href="">About us</a>
-			<a href="">Contact us</a>
+			<a href="#home">Home</a>
+			<a href="#about us">About us</a>
+			<a href="#contact us">Contact us</a>
 		</ul>
 	</nav>
 
