--- a/main.html
+++ b/main.html
@@ -18,14 +18,17 @@
 	<h1>3 random videos</h1>
 	<video width="320" height="240" controls>
       <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+		Your browser does not support the video tag.
     </video>
 
     <video width="320" height="240" controls>
       <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" type="video/ogg">
+		Your browser does not support the video tag.
 	</video>
 	
 	<video width="320" height="240" controls>
        <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4" type="video/ogg">
+	Your browser does not support the video tag.
 	</video>	
 	
 	<!-- the entire body must be written by student -->
